# ferro-io

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  pyproject.toml
.github/workflows/: CI.yml  ci-quality.yml  ci-security.yml  release.yml
benchmarks/: PRIMITIVES.md  PROFILE.md  RESULTS.md  bench.py  bench_libs.py  bench_matrix.py  bench_primitives.py  profile_task_spawn.py
python/ferro_io/: __init__.py  _install.py
src/: errors.rs  lib.rs  runtime.rs
tests/: conftest.py  docker-compose.yml  test_asyncio_bridge.py  test_edge_cases.py  test_errors.py  test_fast_taskgroup.py  test_ferro_io_compat.py  test_heavyweights.py  test_install.py  test_real_world.py  test_runner.py  test_runtime.py  test_symbol_coverage.py  test_third_party.py
