[build-system]
requires = ["maturin>=1.7,<2"]
build-backend = "maturin"

[project]
name = "ferro-io"
version = "0.1.0"
description = "Multi-core async runtime for Python, backed by Tokio. Drop-in asyncio replacement."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "License :: OSI Approved :: MIT License",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "maturin>=1.7,<2",
]
integration = [
    "pytest",
    "maturin>=1.7,<2",
    "asyncpg",
    "sqlalchemy[asyncio]",
    "greenlet",
    "fastapi",
    "starlette",
    "anyio",
    "httpx",
]

[tool.maturin]
module-name = "ferro_io._ferro_io"
python-source = "python"
features = ["pyo3/extension-module"]
strip = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
